syntax = "proto3";

package cameraService;

import "google/api/annotations.proto";

service CameraService {
    // 直播流数据, 数据为h264 nal单元
    rpc LiveH264Stream (LiveH264StreamRequest) returns (stream LiveH264StreamResponse) {}

    // 获取实时当前最新图片jpg
    rpc LatestImage(LatestImageRequest) returns (LatestImageResponse) {
        option (google.api.http) = {
            get: "/api/v2/camera/image"
        };
    }
}

message LiveH264StreamRequest {
}

message LiveH264StreamResponse {
    bytes frame = 1;
}

message LatestImageRequest {

}

message LatestImageResponse {
    // 图片时间
    // 格式: 2019-01-02_03:04:05
    string time = 1;
    // 图片数据
    bytes image = 2;
}
